--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,9 +7,7 @@ AllCops:
   NewCops: enable
   TargetRubyVersion: 3.1.2
   Exclude:
-    - 'config/**/**'
     - 'bin/**/**'
-    - 'lib/**/**'
     - 'vendor/**/**'
 
 Style/Documentation:
@@ -19,6 +17,7 @@ Metrics/BlockLength:
   Exclude:
     - 'spec/**/*.rb'
     - 'db/schema.rb'
+    - 'lib/tasks/auto_annotate_models.rake'
 
 Rails/I18nLocaleTexts:
   Enabled: false
