--- a/config/database.yml
+++ b/config/database.yml
@@ -17,13 +17,14 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  url: <%= ENV['DATABASE_URL'] %>
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: TaskManager_development
+  database: task_manager_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +58,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: TaskManager_test
+  database: task_manager_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +82,3 @@ test:
 #
 production:
   <<: *default
-  database: TaskManager_production
-  username: TaskManager
-  password: <%= ENV["TASKMANAGER_DATABASE_PASSWORD"] %>
