--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,8 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+# Ignore simplecov coverage
+/coverage
+
 /.idea
 .env
