add settings controller to configure user time zone update rubocop config update templates

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -61,3 +61,6 @@ RSpec/MultipleExpectations:
 
 RSpec/MultipleMemoizedHelpers:
   Max: 10
+
+Rails/SkipsModelValidations:
+  AllowedMethods: [update_attribute]
