--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -54,6 +54,11 @@ jobs:
           --health-interval 5s
           --health-timeout 5s
           --health-retries 10
+      redis:
+        image: redis:6-alpine
+        ports:
+          - 6379:6379
+        options: --entrypoint redis-server
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
